--- a/Resources/config/routing/block.yml
+++ b/Resources/config/routing/block.yml
@@ -1,24 +1,24 @@
 block_index:
     path:     /
-    defaults: { _controller: "PageBundle:Block:index" }
+    defaults: { _controller: "AzhuroPageBundle:Block:index" }
     methods:  GET
 
 block_show:
     path:     /{id}/show
-    defaults: { _controller: "PageBundle:Block:show" }
+    defaults: { _controller: "AzhuroPageBundle:Block:show" }
     methods:  GET
 
 block_new:
     path:     /new
-    defaults: { _controller: "PageBundle:Block:new" }
+    defaults: { _controller: "AzhuroPageBundle:Block:new" }
     methods:  [GET, POST]
 
 block_edit:
     path:     /{id}/edit
-    defaults: { _controller: "PageBundle:Block:edit" }
+    defaults: { _controller: "AzhuroPageBundle:Block:edit" }
     methods:  [GET, POST]
 
 block_delete:
     path:     /{id}/delete
-    defaults: { _controller: "PageBundle:Block:delete" }
+    defaults: { _controller: "AzhuroPageBundle:Block:delete" }
     methods:  DELETE
