--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,62 +1,61 @@
 parameters:
-    page.controller.cms_controller.class:       'Azhuro\Bundle\PageBundle\Controller\CmsController'
-    page.router.dynamic_router.class:           'Azhuro\Bundle\PageBundle\Router\DynamicRouter'
-    page.resolver.controller_resolver.class:    'Azhuro\Bundle\PageBundle\Resolver\ControllerResolver'
-    page.event_listener.mapping_listener.class: 'Azhuro\Bundle\PageBundle\EventListener\MappingListener'
-    page.manager.page_manager.class:            'Azhuro\Bundle\PageBundle\Manager\PageManager'
-    page.manager.block_manager.class:           'Azhuro\Bundle\PageBundle\Manager\BlockManager'
-    page.twig.page_extension.class:             'Azhuro\Bundle\PageBundle\Twig\PageExtension'
-    page.templating.helper.page_helper.class:   'Azhuro\Bundle\PageBundle\Templating\Helper\PageHelper'
+    azhuro_page.controller.cms_controller.class:       'Azhuro\Bundle\PageBundle\Controller\CmsController'
+    azhuro_page.router.dynamic_router.class:           'Azhuro\Bundle\PageBundle\Router\DynamicRouter'
+    azhuro_page.resolver.controller_resolver.class:    'Azhuro\Bundle\PageBundle\Resolver\ControllerResolver'
+    azhuro_page.event_listener.mapping_listener.class: 'Azhuro\Bundle\PageBundle\EventListener\LoadORMMetadataListener'
+    azhuro_page.manager.page_manager.class:            'Azhuro\Bundle\PageBundle\Manager\PageManager'
+    azhuro_page.manager.block_manager.class:           'Azhuro\Bundle\PageBundle\Manager\BlockManager'
+    azhuro_page.twig.extension.page_extension.class:   'Azhuro\Bundle\PageBundle\Twig\Extension\PageExtension'
+    azhuro_page.twig.loader.page_twig_loader.class:    'Azhuro\Bundle\PageBundle\Twig\Loader\PageTwigLoader'
+    azhuro_page.templating.helper.page_helper.class:   'Azhuro\Bundle\PageBundle\Templating\Helper\PageHelper'
 
 services:
-    page.controller.cms_controller:
-        class: '%page.controller.cms_controller.class%'
+    azhuro_page.controller.cms_controller:
+        class: '%azhuro_page.controller.cms_controller.class%'
         arguments:
-            - '@templating'
+            - '@twig'
 
-    page.router.dynamic_router:
-        class: '%page.router.dynamic_router.class%'
+    azhuro_page.router.dynamic_router:
+        class: '%azhuro_page.router.dynamic_router.class%'
         arguments:
-            - '@page.manager.page_manager'
+            - '@azhuro_page.manager.page_manager'
 
-    page.resolver.controller_resolver:
-        class: '%page.resolver.controller_resolver.class%'
+    azhuro_page.resolver.controller_resolver:
+        class: '%azhuro_page.resolver.controller_resolver.class%'
         parent: 'controller_resolver'
         arguments:
             - '%kernel.bundles%'
 
-    page.event_listener.mapping_listener:
-        class: '%page.event_listener.mapping_listener.class%'
+    azhuro_page.event_listener.mapping_listener:
+        class: '%azhuro_page.event_listener.mapping_listener.class%'
         arguments:
             - '%page.entity.page_class%'
             - '%page.entity.block_class%'
         tags:
             - { name: 'doctrine.event_listener', event: 'loadClassMetadata' }
 
-    page.manager.page_manager:
-        class: '%page.manager.page_manager.class%'
+    azhuro_page.manager.page_manager:
+        class: '%azhuro_page.manager.page_manager.class%'
         arguments:
             - '@doctrine.orm.entity_manager'
             - '%page.entity.page_class%'
 
-    page.manager.block_manager:
-        class: '%page.manager.block_manager.class%'
+    azhuro_page.manager.block_manager:
+        class: '%azhuro_page.manager.block_manager.class%'
         arguments:
             - '@doctrine.orm.entity_manager'
             - '%page.entity.block_class%'
 
-    page.twig.page_extension:
-        class: '%page.twig.page_extension.class%'
+    azhuro_page.twig.extension.page_extension:
+        class: '%azhuro_page.twig.extension.page_extension.class%'
         arguments:
-           - '@page.templating.helper.page_helper'
+           - '@azhuro_page.templating.helper.page_helper'
         calls:
             - [initRuntime, ['@twig']]
         tags:
             - { name: twig.extension }
 
-    page.templating.helper.page_helper:
-        class: '%page.templating.helper.page_helper.class%'
+    azhuro_page.templating.helper.page_helper:
+        class: '%azhuro_page.templating.helper.page_helper.class%'
         arguments:
             - '@sonata.block.templating.helper'
-        calls:
-            - [render, ['@?']]
